<resources>
    <string name="app_name">Sistem Informasi SKKM</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="home">Home</string>
    <string name="event">Event</string>
    <string name="skkm">SKKM</string>
    <string name="PKM">PKM</string>
    <string name="history">History</string>
    <string name="account">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="apikeyNews">e792d8f46a1b45249e31fe197bb18a63</string>
    <string name="todo">TODO</string>
    <string name="i_putu_purnawadi_putra">I Putu Purnawadi Putra</string>
    <string name="_160030287">160030287</string>
</resources>