<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/home_menu"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/skkm_menu"
        android:title="@string/skkm"
        android:icon="@drawable/ic_baseline_menu_book_24"/>
    <item
        android:id="@+id/pkm_menu"
        android:title="@string/PKM"
        android:icon="@drawable/ic_baseline_book_24"/>

    <item
        android:id="@+id/search_menu"
        android:title="@string/event"
        android:icon="@drawable/ic_baseline_event_note_24"/>

    <item
        android:id="@+id/account_menu"
        android:title="@string/account"
        android:icon="@drawable/ic_baseline_person_24"/>

</menu>